# project-babel

./: .gitignore  .yamllint  AGENTS.md  README.md  docker-compose.yml  flake.nix  package-lock.json
.github/workflows/: ci.yml  docker.yml  pages.yml
babel_backend/: README.md  gleam.toml  manifest.toml  words.json
babel_backend/src/: babel.gleam  json_codec.gleam  types.gleam
babel_backend/src/actors/: manager.gleam  room.gleam
babel_backend/src/logic/: filter.gleam  words.gleam
babel_backend/src/web/: router.gleam  socket.gleam
backend/: Cargo.toml  Dockerfile  README.md  filter_config.json  user_tokens.json
backend/src/: data.rs  filter.rs  game.rs  lib.rs  main.rs  manager.rs  room.rs  server.rs  utils.rs  words.rs
docs/: DOCS.md  HOW_TO_PLAY.md  action-architecture.md  api-example.md  game-spec.md  game_design.md  gleam-rewrite-plan.md  telegram-ui-analysis.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  biome.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts  style.css  televue.d.ts
frontend/src/api/: client.ts
frontend/src/assets/: symbols.json
frontend/src/composables/: useSymbols.ts  useTheme.ts
frontend/src/router/: index.ts
frontend/src/stores/: game.ts
frontend/src/styles/: telegram-theme.css
frontend/src/types/: vue-virtual-scroller.d.ts  websocket.ts
tools/symbol-generator/: README.md  convert.ts  dictionary.json  main.py  preview.html  pyproject.toml  words.json
(+13 files in other folders)
