[package]
name = "babel"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
dashmap = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
futures = "0.3"
once_cell = "1.19"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
